[package]
name = "malted-dev"
version = "9.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
geo = "0.27.0"
humantime = "2.1.0"
openssl = { version = "0.10.61", features = ["vendored"] }
p256 = { version = "0.13.2", features = ["ecdsa-core", "pem"] }
parking_lot = "0.12.1"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.113"
thousands = "0.2.0"
tokio = { version = "1.40.0", features = ["full"] }
urlencoding = "2.1.3"
