[package]
name = "malted-dev"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2.3"
dotenv = "0.15.0"
geo = "0.31.0"
lazy_static = "1.4"
parking_lot = "0.12.5"
regex = "1.11.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tiny_http = "0.12.0"
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"
